[build-system]
requires = ["setuptools>=34.4", "wheel"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_variable = ["harlow/__init__.py:__version__"]
branch = "master"
major_on_zero = True
upload_to_PyPI = true
upload_to_release = true

[tool.coverage.run]
source = ["harlow"]
