[metadata]
name = harlow
description = Adaptive surrogate modelling.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ci.tno.nl/gitlab/dt4si/adaptive_sampling
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Operating System :: OS Independent

[options]
python_requires = >= 3.6
packages = find:
install_requires =
    numpy<2
    numba<1
    matplotlib<4
    matplotlib-label-lines<1
    scikit-learn<2
    scikit-optimize<1
    tensorflow<3
    tensorflow_probability<2
    loguru<1
    torch<2
    botorch<1



[options.extras_require]
tests =
    pytest
    scipy<2
    coverage[toml]

docs =
    six
    sphinx<5
    sphinx-copybutton<1
    sphinx-inline-tabs
    sphinxcontrib-bibtex<3
    myst-parser<1
    sphinx-rtd-theme<2
    sphinx-rtd-dark-mode<2
    sphinx_gallery<1

lint_type_checks =
    pre-commit
