[metadata]
name = harlow
version = attr: harlow.__version__

author = "Merijn de Baker"
author_email = "merijn.debakker@tno.nl"

description = Adaptive surrogate modelling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TNO/harlow
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Operating System :: OS Independent
license_files = LICENSE

[options]
python_requires = >= 3.7
packages = find:
install_requires =
    numpy<2
    numba<1
    matplotlib<4
    matplotlib-label-lines<1
    corner
    scikit-fuzzy
    scikit-learn<2
    scikit-optimize<1
    tensorboardX<3
    tensorflow<3
    tensorflow_probability<2
    loguru<1
    torch<2
    botorch<1
    gpytorch<2
    shortuuid


[options.extras_require]
tests =
    pytest
    scipy<2
    coverage[toml]
    matplotlib

docs =
    six
    sphinx<5
    sphinx-copybutton<1
    sphinx-inline-tabs
    sphinxcontrib-bibtex<3
    myst-parser<1
    sphinx-rtd-theme<2
    sphinx-rtd-dark-mode<2
    furo
    sphinx_gallery<1
    sphinx-autoapi

lint_type_checks =
    pre-commit
